Made class accessor computations lazier